--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48e1dd67",
+   "id": "26ff523e",
    "metadata": {},
    "source": [
     "## Project Structure\n",
@@ -39,9 +39,10 @@
     "│   ├── keyboard_config.ipynb    # Review-specific keyboard building blocks for assembly into a KeyboardManager\n",
     "│   ├── review_card.ipynb        # Review card component showing assembled segment with timing and source info\n",
     "│   └── step_renderer.ipynb      # Composable render functions for the review card stack step\n",
-    "├── routes/ (4)\n",
+    "├── routes/ (5)\n",
     "│   ├── audio.ipynb       # Route handlers for audio playback controls\n",
     "│   ├── card_stack.ipynb  # Card stack UI operations — navigation, viewport, and response builders\n",
+    "│   ├── commit.ipynb      # Route handler for committing the document to the context graph\n",
     "│   ├── core.ipynb        # Review step state management helpers\n",
     "│   └── init.ipynb        # Router assembly for Phase 3 review routes\n",
     "├── services/ (1)\n",
@@ -51,12 +52,12 @@
     "└── utils.ipynb     # Time formatting and source info display utilities for review cards\n",
     "```\n",
     "\n",
-    "Total: 15 notebooks across 3 directories"
+    "Total: 16 notebooks across 3 directories"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "257e5fae",
+   "id": "8ba94937",
    "metadata": {},
    "source": [
     "## Module Dependencies\n",
@@ -74,6 +75,7 @@
     "    models[models<br/>models]\n",
     "    routes_audio[routes.audio<br/>audio]\n",
     "    routes_card_stack[routes.card_stack<br/>card_stack]\n",
+    "    routes_commit[routes.commit<br/>commit]\n",
     "    routes_core[routes.core<br/>core]\n",
     "    routes_init[routes.init<br/>init]\n",
     "    services_graph[services.graph<br/>graph]\n",
@@ -83,31 +85,36 @@
     "    components_review_card --> utils\n",
     "    components_review_card --> html_ids\n",
     "    components_step_renderer --> components_card_stack_config\n",
-    "    components_step_renderer --> components_callbacks\n",
-    "    components_step_renderer --> components_audio_controls\n",
     "    components_step_renderer --> components_review_card\n",
     "    components_step_renderer --> models\n",
     "    components_step_renderer --> html_ids\n",
+    "    components_step_renderer --> components_audio_controls\n",
+    "    components_step_renderer --> components_callbacks\n",
     "    routes_audio --> routes_core\n",
     "    routes_audio --> models\n",
-    "    routes_card_stack --> routes_core\n",
     "    routes_card_stack --> components_card_stack_config\n",
     "    routes_card_stack --> components_review_card\n",
+    "    routes_card_stack --> routes_core\n",
     "    routes_card_stack --> models\n",
+    "    routes_commit --> models\n",
+    "    routes_commit --> routes_core\n",
+    "    routes_commit --> services_graph\n",
     "    routes_core --> components_review_card\n",
     "    routes_core --> models\n",
     "    routes_init --> routes_audio\n",
-    "    routes_init --> routes_core\n",
-    "    routes_init --> models\n",
     "    routes_init --> routes_card_stack\n",
+    "    routes_init --> models\n",
+    "    routes_init --> routes_core\n",
+    "    routes_init --> services_graph\n",
+    "    routes_init --> routes_commit\n",
     "```\n",
     "\n",
-    "*21 cross-module dependencies detected*"
+    "*26 cross-module dependencies detected*"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a348f738",
+   "id": "ddcf3bcd",
    "metadata": {},
    "source": [
     "## CLI Reference\n",
@@ -117,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cd19f3c",
+   "id": "6707f304",
    "metadata": {},
    "source": [
     "## Module Overview\n",
@@ -127,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9562d947",
+   "id": "1740983c",
    "metadata": {},
    "source": [
     "### audio (`audio.ipynb`)\n",
@@ -182,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "398ee00c",
+   "id": "d361812c",
    "metadata": {},
    "source": [
     "### audio_controls (`audio_controls.ipynb`)\n",
@@ -245,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fced4b0",
+   "id": "a3354187",
    "metadata": {},
    "source": [
     "### callbacks (`callbacks.ipynb`)\n",
@@ -287,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e09f9f94",
+   "id": "3c42a3ba",
    "metadata": {},
    "source": [
     "### card_stack (`card_stack.ipynb`)\n",
@@ -367,7 +374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4891c8a2",
+   "id": "e5d86910",
    "metadata": {},
    "source": [
     "### card_stack_config (`card_stack_config.ipynb`)\n",
@@ -393,7 +400,81 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30db0f4d",
+   "id": "612fa70a",
+   "metadata": {},
+   "source": [
+    "### commit (`commit.ipynb`)\n",
+    "> Route handler for committing the document to the context graph\n",
+    "\n",
+    "#### Import\n",
+    "\n",
+    "```python\n",
+    "from cjm_transcript_review.routes.commit import (\n",
+    "    DEBUG_COMMIT_ROUTES,\n",
+    "    COMMIT_ALERT_ID,\n",
+    "    CommitResult,\n",
+    "    init_commit_router\n",
+    ")\n",
+    "```\n",
+    "\n",
+    "#### Functions\n",
+    "\n",
+    "```python\n",
+    "def _render_commit_alert(\n",
+    "    result:CommitResult,  # Commit operation result\n",
+    "    auto_dismiss_ms:int=5000,  # Auto-dismiss after milliseconds (0 = no auto-dismiss)\n",
+    ") -> Div:  # Alert element with optional auto-dismiss script\n",
+    "    \"Render a success or error alert for commit result.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "async def _handle_commit(\n",
+    "    state_store:WorkflowStateStore,  # The workflow state store\n",
+    "    workflow_id:str,  # The workflow identifier\n",
+    "    session_id:str,  # Session identifier string\n",
+    "    graph_service:GraphService,  # Graph service for committing\n",
+    "    document_title:Optional[str]=None,  # Override document title (None = use state)\n",
+    ") -> CommitResult:  # Result of the commit operation\n",
+    "    \"Handle committing the document to the context graph.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def init_commit_router(\n",
+    "    state_store:WorkflowStateStore,  # The workflow state store\n",
+    "    workflow_id:str,  # The workflow identifier\n",
+    "    prefix:str,  # Base prefix for commit route\n",
+    "    graph_service:GraphService,  # Graph service for committing\n",
+    "    urls:ReviewUrls,  # URL bundle to populate\n",
+    "    alert_container_id:str=\"commit-alert-container\",  # ID of container for alert OOB swap\n",
+    ") -> Tuple[APIRouter, Dict[str, Callable]]:  # (router, routes dict)\n",
+    "    \"Initialize commit route.\"\n",
+    "```\n",
+    "\n",
+    "#### Classes\n",
+    "\n",
+    "```python\n",
+    "@dataclass\n",
+    "class CommitResult:\n",
+    "    \"Result of a commit operation.\"\n",
+    "    \n",
+    "    success: bool  # Whether the commit succeeded\n",
+    "    document_id: Optional[str]  # Created document node ID\n",
+    "    segment_count: int = 0  # Number of segments committed\n",
+    "    edge_count: int = 0  # Number of edges created\n",
+    "    error: Optional[str]  # Error message if failed\n",
+    "```\n",
+    "\n",
+    "#### Variables\n",
+    "\n",
+    "```python\n",
+    "DEBUG_COMMIT_ROUTES = False\n",
+    "COMMIT_ALERT_ID = 'commit-alert'\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab92a89b",
    "metadata": {},
    "source": [
     "### core (`core.ipynb`)\n",
@@ -494,7 +575,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c99333b",
+   "id": "6dfbc999",
    "metadata": {},
    "source": [
     "### graph (`graph.ipynb`)\n",
@@ -566,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ef981de",
+   "id": "d820a444",
    "metadata": {},
    "source": [
     "### helpers (`helpers.ipynb`)\n",
@@ -649,7 +730,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f27a206",
+   "id": "a2f439fb",
    "metadata": {},
    "source": [
     "### html_ids (`html_ids.ipynb`)\n",
@@ -682,7 +763,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e81d2ef6",
+   "id": "fbcf5050",
    "metadata": {},
    "source": [
     "### init (`init.ipynb`)\n",
@@ -704,6 +785,8 @@
     "    workflow_id:str,  # The workflow identifier\n",
     "    prefix:str,  # Base prefix for review routes (e.g., \"/workflow/review\")\n",
     "    audio_src_url:str=\"\",  # Audio source route (from core routes)\n",
+    "    graph_service:Optional[GraphService]=None,  # Graph service for commit (None = no commit route)\n",
+    "    alert_container_id:str=\"commit-alert-container\",  # ID of container for commit alerts\n",
     ") -> Tuple[List[APIRouter], ReviewUrls, Dict[str, Callable]]:  # (routers, urls, routes)\n",
     "    \"Initialize and return all review routers with URL bundle.\"\n",
     "```\n"
@@ -711,7 +794,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22956721",
+   "id": "07c30fe0",
    "metadata": {},
    "source": [
     "### keyboard_config (`keyboard_config.ipynb`)\n",
@@ -739,7 +822,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8c48100",
+   "id": "6358baab",
    "metadata": {},
    "source": [
     "### models (`models.ipynb`)\n",
@@ -804,7 +887,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bcb4b98",
+   "id": "09e0259c",
    "metadata": {},
    "source": [
     "### review_card (`review_card.ipynb`)\n",
@@ -881,7 +964,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdcf2376",
+   "id": "9eef9dff",
    "metadata": {},
    "source": [
     "### step_renderer (`step_renderer.ipynb`)\n",
@@ -968,7 +1051,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "211bb94e",
+   "id": "cd3fef0c",
    "metadata": {},
    "source": [
     "### utils (`utils.ipynb`)\n",
