--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5107821f",
+   "id": "1d35108d",
    "metadata": {},
    "source": [
     "## Project Structure\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0380870f",
+   "id": "77d3455f",
    "metadata": {},
    "source": [
     "## Module Dependencies\n",
@@ -82,32 +82,32 @@
     "    utils[utils<br/>utils]\n",
     "\n",
     "    components_helpers --> models\n",
-    "    components_review_card --> utils\n",
     "    components_review_card --> html_ids\n",
-    "    components_step_renderer --> components_card_stack_config\n",
-    "    components_step_renderer --> components_audio_controls\n",
+    "    components_review_card --> utils\n",
     "    components_step_renderer --> components_review_card\n",
-    "    components_step_renderer --> html_ids\n",
-    "    components_step_renderer --> models\n",
     "    components_step_renderer --> components_callbacks\n",
+    "    components_step_renderer --> html_ids\n",
+    "    components_step_renderer --> components_card_stack_config\n",
     "    components_step_renderer --> components_keyboard_config\n",
-    "    routes_audio --> models\n",
+    "    components_step_renderer --> components_audio_controls\n",
+    "    components_step_renderer --> models\n",
     "    routes_audio --> routes_core\n",
-    "    routes_card_stack --> components_card_stack_config\n",
-    "    routes_card_stack --> components_review_card\n",
-    "    routes_card_stack --> models\n",
+    "    routes_audio --> models\n",
     "    routes_card_stack --> routes_core\n",
-    "    routes_commit --> models\n",
-    "    routes_commit --> services_graph\n",
+    "    routes_card_stack --> components_review_card\n",
+    "    routes_card_stack --> components_card_stack_config\n",
+    "    routes_card_stack --> models\n",
     "    routes_commit --> routes_core\n",
+    "    routes_commit --> services_graph\n",
+    "    routes_commit --> models\n",
     "    routes_core --> models\n",
     "    routes_core --> components_review_card\n",
-    "    routes_init --> models\n",
     "    routes_init --> services_graph\n",
     "    routes_init --> routes_commit\n",
+    "    routes_init --> models\n",
     "    routes_init --> routes_audio\n",
-    "    routes_init --> routes_card_stack\n",
     "    routes_init --> routes_core\n",
+    "    routes_init --> routes_card_stack\n",
     "```\n",
     "\n",
     "*27 cross-module dependencies detected*"
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef22a786",
+   "id": "77fcb934",
    "metadata": {},
    "source": [
     "## CLI Reference\n",
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b2e62d2",
+   "id": "fe3dea79",
    "metadata": {},
    "source": [
     "## Module Overview\n",
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b1fb0f9",
+   "id": "8594b69e",
    "metadata": {},
    "source": [
     "### audio (`audio.ipynb`)\n",
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d927ed6",
+   "id": "1b398c2b",
    "metadata": {},
    "source": [
     "### audio_controls (`audio_controls.ipynb`)\n",
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e351505b",
+   "id": "f04ca497",
    "metadata": {},
    "source": [
     "### callbacks (`callbacks.ipynb`)\n",
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed74123d",
+   "id": "65bcbcd9",
    "metadata": {},
    "source": [
     "### card_stack (`card_stack.ipynb`)\n",
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf3b9471",
+   "id": "8541c54d",
    "metadata": {},
    "source": [
     "### card_stack_config (`card_stack_config.ipynb`)\n",
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8184be6a",
+   "id": "5acaa0a5",
    "metadata": {},
    "source": [
     "### commit (`commit.ipynb`)\n",
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "662fec54",
+   "id": "b3101e25",
    "metadata": {},
    "source": [
     "### core (`core.ipynb`)\n",
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2462709a",
+   "id": "03543e7c",
    "metadata": {},
    "source": [
     "### graph (`graph.ipynb`)\n",
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fef56469",
+   "id": "0aac519f",
    "metadata": {},
    "source": [
     "### helpers (`helpers.ipynb`)\n",
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa693663",
+   "id": "d8ccfca7",
    "metadata": {},
    "source": [
     "### html_ids (`html_ids.ipynb`)\n",
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e00bd0c",
+   "id": "5f84d2f3",
    "metadata": {},
    "source": [
     "### init (`init.ipynb`)\n",
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c5743ba",
+   "id": "c5717e31",
    "metadata": {},
    "source": [
     "### keyboard_config (`keyboard_config.ipynb`)\n",
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de96ef18",
+   "id": "55c45f91",
    "metadata": {},
    "source": [
     "### models (`models.ipynb`)\n",
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fcd38b8",
+   "id": "1d3a273e",
    "metadata": {},
    "source": [
     "### review_card (`review_card.ipynb`)\n",
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "654b01df",
+   "id": "0285dbf6",
    "metadata": {},
    "source": [
     "### step_renderer (`step_renderer.ipynb`)\n",
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ffb24a4",
+   "id": "7e06bff0",
    "metadata": {},
    "source": [
     "### utils (`utils.ipynb`)\n",
@@ -1082,7 +1082,8 @@
     "    format_duration,\n",
     "    truncate_id,\n",
     "    format_char_range,\n",
-    "    format_source_info\n",
+    "    format_source_info,\n",
+    "    generate_document_title\n",
     ")\n",
     "```\n",
     "\n",
@@ -1127,6 +1128,14 @@
     "    end_char:Optional[int]=None,  # End character index\n",
     ") -> str:  # Formatted source info string\n",
     "    \"Format source info for display in review cards.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def generate_document_title(\n",
+    "    media_path:Optional[str],  # Path to media file\n",
+    "    default:str=\"Untitled Document\",  # Fallback title if path is None\n",
+    ") -> str:  # Clean document title\n",
+    "    \"Generate a document title from a media file path.\"\n",
     "```\n"
    ]
   }
