--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d35108d",
+   "id": "7f98a34e",
    "metadata": {},
    "source": [
     "## Project Structure\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77d3455f",
+   "id": "a7a9f7e4",
    "metadata": {},
    "source": [
     "## Module Dependencies\n",
@@ -82,40 +82,41 @@
     "    utils[utils<br/>utils]\n",
     "\n",
     "    components_helpers --> models\n",
-    "    components_review_card --> html_ids\n",
     "    components_review_card --> utils\n",
+    "    components_review_card --> html_ids\n",
+    "    components_step_renderer --> components_card_stack_config\n",
     "    components_step_renderer --> components_review_card\n",
+    "    components_step_renderer --> components_audio_controls\n",
+    "    components_step_renderer --> components_keyboard_config\n",
     "    components_step_renderer --> components_callbacks\n",
     "    components_step_renderer --> html_ids\n",
-    "    components_step_renderer --> components_card_stack_config\n",
-    "    components_step_renderer --> components_keyboard_config\n",
-    "    components_step_renderer --> components_audio_controls\n",
     "    components_step_renderer --> models\n",
     "    routes_audio --> routes_core\n",
     "    routes_audio --> models\n",
-    "    routes_card_stack --> routes_core\n",
-    "    routes_card_stack --> components_review_card\n",
     "    routes_card_stack --> components_card_stack_config\n",
+    "    routes_card_stack --> components_review_card\n",
+    "    routes_card_stack --> routes_core\n",
     "    routes_card_stack --> models\n",
-    "    routes_commit --> routes_core\n",
     "    routes_commit --> services_graph\n",
+    "    routes_commit --> utils\n",
+    "    routes_commit --> routes_core\n",
     "    routes_commit --> models\n",
     "    routes_core --> models\n",
     "    routes_core --> components_review_card\n",
     "    routes_init --> services_graph\n",
     "    routes_init --> routes_commit\n",
-    "    routes_init --> models\n",
-    "    routes_init --> routes_audio\n",
     "    routes_init --> routes_core\n",
     "    routes_init --> routes_card_stack\n",
+    "    routes_init --> models\n",
+    "    routes_init --> routes_audio\n",
     "```\n",
     "\n",
-    "*27 cross-module dependencies detected*"
+    "*28 cross-module dependencies detected*"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "77fcb934",
+   "id": "c45cfdb4",
    "metadata": {},
    "source": [
     "## CLI Reference\n",
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe3dea79",
+   "id": "b38ae74b",
    "metadata": {},
    "source": [
     "## Module Overview\n",
@@ -135,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8594b69e",
+   "id": "1ec1bb73",
    "metadata": {},
    "source": [
     "### audio (`audio.ipynb`)\n",
@@ -190,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b398c2b",
+   "id": "ff126688",
    "metadata": {},
    "source": [
     "### audio_controls (`audio_controls.ipynb`)\n",
@@ -253,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f04ca497",
+   "id": "1df4ecaa",
    "metadata": {},
    "source": [
     "### callbacks (`callbacks.ipynb`)\n",
@@ -295,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65bcbcd9",
+   "id": "2b63c54e",
    "metadata": {},
    "source": [
     "### card_stack (`card_stack.ipynb`)\n",
@@ -375,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8541c54d",
+   "id": "b8fbd1e3",
    "metadata": {},
    "source": [
     "### card_stack_config (`card_stack_config.ipynb`)\n",
@@ -401,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5acaa0a5",
+   "id": "51b373e3",
    "metadata": {},
    "source": [
     "### commit (`commit.ipynb`)\n",
@@ -434,7 +435,7 @@
     "    workflow_id:str,  # The workflow identifier\n",
     "    session_id:str,  # Session identifier string\n",
     "    graph_service:GraphService,  # Graph service for committing\n",
-    "    document_title:Optional[str]=None,  # Override document title (None = use state)\n",
+    "    document_title:Optional[str]=None,  # Override document title (None = auto-generate)\n",
     ") -> CommitResult:  # Result of the commit operation\n",
     "    \"Handle committing the document to the context graph.\"\n",
     "```\n",
@@ -475,7 +476,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3101e25",
+   "id": "bdaaf224",
    "metadata": {},
    "source": [
     "### core (`core.ipynb`)\n",
@@ -576,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03543e7c",
+   "id": "23b1fe58",
    "metadata": {},
    "source": [
     "### graph (`graph.ipynb`)\n",
@@ -648,7 +649,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0aac519f",
+   "id": "e21f1669",
    "metadata": {},
    "source": [
     "### helpers (`helpers.ipynb`)\n",
@@ -731,7 +732,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8ccfca7",
+   "id": "62a16ca8",
    "metadata": {},
    "source": [
     "### html_ids (`html_ids.ipynb`)\n",
@@ -764,7 +765,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f84d2f3",
+   "id": "6c3237d3",
    "metadata": {},
    "source": [
     "### init (`init.ipynb`)\n",
@@ -795,7 +796,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5717e31",
+   "id": "a17ced24",
    "metadata": {},
    "source": [
     "### keyboard_config (`keyboard_config.ipynb`)\n",
@@ -833,7 +834,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55c45f91",
+   "id": "ac6ff7e1",
    "metadata": {},
    "source": [
     "### models (`models.ipynb`)\n",
@@ -898,7 +899,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d3a273e",
+   "id": "49ed58c8",
    "metadata": {},
    "source": [
     "### review_card (`review_card.ipynb`)\n",
@@ -975,7 +976,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0285dbf6",
+   "id": "6a036ec0",
    "metadata": {},
    "source": [
     "### step_renderer (`step_renderer.ipynb`)\n",
@@ -1068,7 +1069,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e06bff0",
+   "id": "874192a9",
    "metadata": {},
    "source": [
     "### utils (`utils.ipynb`)\n",
