--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f98a34e",
+   "id": "c20526a6",
    "metadata": {},
    "source": [
     "## Project Structure\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7a9f7e4",
+   "id": "43ed6a5d",
    "metadata": {},
    "source": [
     "## Module Dependencies\n",
@@ -84,39 +84,40 @@
     "    components_helpers --> models\n",
     "    components_review_card --> utils\n",
     "    components_review_card --> html_ids\n",
-    "    components_step_renderer --> components_card_stack_config\n",
-    "    components_step_renderer --> components_review_card\n",
-    "    components_step_renderer --> components_audio_controls\n",
     "    components_step_renderer --> components_keyboard_config\n",
+    "    components_step_renderer --> components_audio_controls\n",
     "    components_step_renderer --> components_callbacks\n",
-    "    components_step_renderer --> html_ids\n",
+    "    components_step_renderer --> components_review_card\n",
+    "    components_step_renderer --> components_card_stack_config\n",
     "    components_step_renderer --> models\n",
-    "    routes_audio --> routes_core\n",
+    "    components_step_renderer --> html_ids\n",
     "    routes_audio --> models\n",
-    "    routes_card_stack --> components_card_stack_config\n",
-    "    routes_card_stack --> components_review_card\n",
+    "    routes_audio --> routes_core\n",
     "    routes_card_stack --> routes_core\n",
+    "    routes_card_stack --> components_review_card\n",
+    "    routes_card_stack --> components_card_stack_config\n",
+    "    routes_card_stack --> components_step_renderer\n",
     "    routes_card_stack --> models\n",
     "    routes_commit --> services_graph\n",
-    "    routes_commit --> utils\n",
     "    routes_commit --> routes_core\n",
+    "    routes_commit --> utils\n",
     "    routes_commit --> models\n",
-    "    routes_core --> models\n",
     "    routes_core --> components_review_card\n",
-    "    routes_init --> services_graph\n",
-    "    routes_init --> routes_commit\n",
-    "    routes_init --> routes_core\n",
+    "    routes_core --> models\n",
     "    routes_init --> routes_card_stack\n",
-    "    routes_init --> models\n",
     "    routes_init --> routes_audio\n",
+    "    routes_init --> services_graph\n",
+    "    routes_init --> models\n",
+    "    routes_init --> routes_core\n",
+    "    routes_init --> routes_commit\n",
     "```\n",
     "\n",
-    "*28 cross-module dependencies detected*"
+    "*29 cross-module dependencies detected*"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c45cfdb4",
+   "id": "5455cf6c",
    "metadata": {},
    "source": [
     "## CLI Reference\n",
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b38ae74b",
+   "id": "313b6e84",
    "metadata": {},
    "source": [
     "## Module Overview\n",
@@ -136,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ec1bb73",
+   "id": "6ae2a2e5",
    "metadata": {},
    "source": [
     "### audio (`audio.ipynb`)\n",
@@ -157,14 +158,14 @@
     "def _generate_speed_change_js(\n",
     "    speed:float  # New playback speed\n",
     ") -> str:  # JavaScript to update playback rate\n",
-    "    \"Generate JS to update Web Audio API playback rate.\"\n",
+    "    \"Generate JS to update Web Audio API playback rate via shared library.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def _generate_auto_nav_js(\n",
     "    enabled:bool  # Whether auto-navigate is enabled\n",
     ") -> str:  # JavaScript to update auto-navigate flag\n",
-    "    \"Generate JS to update auto-navigate client-side flag.\"\n",
+    "    \"Generate JS to update auto-navigate flag via shared library.\"\n",
     "```\n",
     "\n",
     "```python\n",
@@ -191,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff126688",
+   "id": "6f88ba40",
    "metadata": {},
    "source": [
     "### audio_controls (`audio_controls.ipynb`)\n",
@@ -254,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1df4ecaa",
+   "id": "3e20b17d",
    "metadata": {},
    "source": [
     "### callbacks (`callbacks.ipynb`)\n",
@@ -264,21 +265,12 @@
     "\n",
     "```python\n",
     "from cjm_transcript_review.components.callbacks import (\n",
+    "    REVIEW_AUDIO_CONFIG,\n",
     "    generate_review_callbacks_script\n",
     ")\n",
     "```\n",
     "\n",
     "#### Functions\n",
-    "\n",
-    "```python\n",
-    "def _generate_review_focus_change_script(\n",
-    "    focus_input_id:str,  # ID of hidden input for focused segment index\n",
-    "    audio_player_id:str,  # ID of the hidden audio element (for src URL extraction)\n",
-    "    card_stack_id:str,  # ID of the review card stack container\n",
-    "    nav_down_btn_id:str,  # ID of nav_down button for auto-navigate\n",
-    ") -> str:  # JavaScript for focus change with audio playback\n",
-    "    \"Generate JS for review focus change handling with Web Audio API playback.\"\n",
-    "```\n",
     "\n",
     "```python\n",
     "def generate_review_callbacks_script(\n",
@@ -288,15 +280,20 @@
     "    urls:CardStackUrls,  # Card stack URL bundle\n",
     "    container_id:str,  # ID of the review container (parent of card stack)\n",
     "    focus_input_id:str,  # ID of hidden input for focused segment index\n",
-    "    audio_player_id:str,  # ID of the hidden audio element\n",
     ") -> any:  # Script element with all JavaScript callbacks\n",
-    "    \"Generate JavaScript for review card stack with audio audition.\"\n",
-    "```\n"
+    "    \"Generate JavaScript for review card stack with Web Audio API audition.\"\n",
+    "```\n",
+    "\n",
+    "#### Variables\n",
+    "\n",
+    "```python\n",
+    "REVIEW_AUDIO_CONFIG\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2b63c54e",
+   "id": "b63724ce",
    "metadata": {},
    "source": [
     "### card_stack (`card_stack.ipynb`)\n",
@@ -337,7 +334,7 @@
     "    sess,  # FastHTML session object\n",
     "    direction:str,  # Navigation direction: \"up\", \"down\", \"first\", \"last\", \"page_up\", \"page_down\"\n",
     "    urls:ReviewUrls,  # URL bundle for review routes\n",
-    "):  # OOB slot updates with progress and focus\n",
+    "):  # OOB slot updates with progress, focus, and source position\n",
     "    \"Navigate to a different segment in the viewport using OOB slot swaps.\"\n",
     "```\n",
     "\n",
@@ -376,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8fbd1e3",
+   "id": "529bf815",
    "metadata": {},
    "source": [
     "### card_stack_config (`card_stack_config.ipynb`)\n",
@@ -402,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51b373e3",
+   "id": "a843c1b1",
    "metadata": {},
    "source": [
     "### commit (`commit.ipynb`)\n",
@@ -476,7 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdaaf224",
+   "id": "ba44ac2d",
    "metadata": {},
    "source": [
     "### core (`core.ipynb`)\n",
@@ -577,7 +574,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23b1fe58",
+   "id": "9ba88b7b",
    "metadata": {},
    "source": [
     "### graph (`graph.ipynb`)\n",
@@ -649,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e21f1669",
+   "id": "fd0bdb37",
    "metadata": {},
    "source": [
     "### helpers (`helpers.ipynb`)\n",
@@ -732,7 +729,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62a16ca8",
+   "id": "ef990b00",
    "metadata": {},
    "source": [
     "### html_ids (`html_ids.ipynb`)\n",
@@ -765,7 +762,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c3237d3",
+   "id": "f19518e0",
    "metadata": {},
    "source": [
     "### init (`init.ipynb`)\n",
@@ -796,7 +793,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a17ced24",
+   "id": "27dea20a",
    "metadata": {},
    "source": [
     "### keyboard_config (`keyboard_config.ipynb`)\n",
@@ -834,7 +831,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac6ff7e1",
+   "id": "fbbee0a4",
    "metadata": {},
    "source": [
     "### models (`models.ipynb`)\n",
@@ -899,7 +896,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49ed58c8",
+   "id": "fecb1464",
    "metadata": {},
    "source": [
     "### review_card (`review_card.ipynb`)\n",
@@ -921,17 +918,16 @@
     "def render_review_card(\n",
     "    assembled:AssembledSegment,  # Assembled segment with text and timing\n",
     "    card_role:CardRole,  # Role of this card in viewport (\"focused\" or \"context\")\n",
+    "    has_boundary_above:bool=False,  # Audio file boundary exists above this card\n",
+    "    has_boundary_below:bool=False,  # Audio file boundary exists below this card\n",
     ") -> Any:  # Review card component\n",
     "    \"Render a single review card with text, timing, and source info.\"\n",
     "```\n",
     "\n",
     "```python\n",
-    "def create_review_card_renderer() -> Callable:  # Card renderer callback: (item, CardRenderContext) -> FT\n",
-    "    \"\"\"Create a card renderer callback for review cards.\"\"\"\n",
-    "    def _render(\n",
-    "        item:Any,  # AssembledSegment instance\n",
-    "        context:CardRenderContext,  # Render context from card stack library\n",
-    "    ) -> Any:  # Rendered review card component\n",
+    "def create_review_card_renderer(\n",
+    "    audio_file_boundaries:Set[int]=None,  # Indices where audio_file_index changes\n",
+    ") -> Callable:  # Card renderer callback: (item, CardRenderContext) -> FT\n",
     "    \"Create a card renderer callback for review cards.\"\n",
     "```\n",
     "\n",
@@ -976,7 +972,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a036ec0",
+   "id": "5e9a202d",
    "metadata": {},
    "source": [
     "### step_renderer (`step_renderer.ipynb`)\n",
@@ -989,6 +985,7 @@
     "    DEBUG_REVIEW_RENDER,\n",
     "    render_review_toolbar,\n",
     "    render_review_stats,\n",
+    "    render_review_source_position,\n",
     "    render_review_keyboard_hints,\n",
     "    render_review_content,\n",
     "    render_review_footer,\n",
@@ -1019,6 +1016,15 @@
     "```\n",
     "\n",
     "```python\n",
+    "def render_review_source_position(\n",
+    "    assembled:List[AssembledSegment],  # Assembled segments\n",
+    "    focused_index:int=0,  # Currently focused segment index\n",
+    "    oob:bool=False,  # Whether to render as OOB swap\n",
+    ") -> Any:  # Audio file position indicator (empty if single file)\n",
+    "    \"Render audio file position indicator for the focused segment.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
     "def render_review_keyboard_hints(\n",
     "    oob:bool=False,  # Whether to render as OOB swap\n",
     ") -> Any:  # Collapsible keyboard hints component\n",
@@ -1032,7 +1038,7 @@
     "    visible_count:int,  # Number of visible cards in viewport\n",
     "    card_width:int,  # Card stack width in rem\n",
     "    urls:ReviewUrls,  # URL bundle for review routes\n",
-    "    media_path:Optional[str]=None,  # Path to audio file for playback\n",
+    "    audio_urls:Optional[List[str]]=None,  # Audio file URLs for Web Audio API\n",
     ") -> Any:  # Main content area\n",
     "    \"Render the review content area with card stack viewport and keyboard system.\"\n",
     "```\n",
@@ -1041,8 +1047,8 @@
     "def render_review_footer(\n",
     "    assembled:List[AssembledSegment],  # Assembled segments\n",
     "    focused_index:int,  # Currently focused segment index\n",
-    ") -> Any:  # Footer content with progress indicator and stats\n",
-    "    \"Render footer content with progress indicator and statistics.\"\n",
+    ") -> Any:  # Footer content with progress indicator, source position, and stats\n",
+    "    \"Render footer content with progress indicator, source position, and statistics.\"\n",
     "```\n",
     "\n",
     "```python\n",
@@ -1055,7 +1061,7 @@
     "    playback_speed:float=1.0,  # Current playback speed\n",
     "    auto_navigate:bool=False,  # Whether auto-navigate is enabled\n",
     "    urls:ReviewUrls=None,  # URL bundle for review routes\n",
-    "    media_path:Optional[str]=None,  # Path to audio file for playback\n",
+    "    audio_urls:Optional[List[str]]=None,  # Audio file URLs for Web Audio API\n",
     ") -> Any:  # Complete review step component\n",
     "    \"Render the complete review step with toolbar, content, and footer.\"\n",
     "```\n",
@@ -1069,7 +1075,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "874192a9",
+   "id": "59716c1c",
    "metadata": {},
    "source": [
     "### utils (`utils.ipynb`)\n",
